istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demo-app
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/demo-app-gateway
  http:
    - route:
        - destination:
            host: demo-app.default.svc.cluster.local
            subset: v1
          weight: 90
        - destination:
            host: demo-app.default.svc.cluster.local
            subset: v2
          weight: 10
